# chromadb-bedrock-workshop

./: .gitignore  Taskfile.yml  bedrock-start.py  chromadb-bedrock.py  chromadb-persisted.py  chromadb-start.py  pyproject.toml  readme.md  tecracer-faq.txt
bedrock/: embedding.py
titan/: embedding.py
