[tool.poetry]
name = "py-chroma"
version = "0.1.0"
description = ""
authors = ["Gernot Glawe <gglawe@tecracer.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chromadb = "^0.5.3"
tiktoken = "^0.7.0"
langgraph = "^0.1.4"
tavily-python = "^0.3.3"
langchain-aws = "^0.1.8"
langchain-community = "^0.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
